fixed wrapping in calculator

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 body {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 table,
-tr,
 td {
   border: 2px solid;
 }
@@ -16,16 +16,20 @@ th:nth-child(even) {
 
 table {
   width: 90vw;
+  max-width: 90vw;
+  padding: 0px;
+  background-color: grey;
 }
 
 .calc-row {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  height: 40px;
+  min-height: 40px;
   align-items: center;
   padding: 0px;
-  height: ;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 #calc-row5 {
@@ -57,9 +61,15 @@ tr {
 #calc-display {
   background-color: yellow;
   display: flex;
-  align-items: center;
+  align-items: start;
+  justify-content: center;
+  min-width: 40%;
+  max-width: 80%;
+  max-height: 80px;
+  /* overflow-wrap: break-word; */
+  overflow: auto;
 }
 
-#calc-display > * {
+#calc-display > p {
   margin: 20px 20px 20px 20px;
 }
